--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "openai": "^4.60.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
