--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
     "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.436.0",
