--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
+    "framer-motion": "^11.5.4",
     "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
